Add 4 questions to the FAQ + add redirect to landing page + logo #35 + Add FAQ link to the landing page #5

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -355,6 +355,7 @@
         >Amet consectetur adipiscing elit...</span
       > -->
     </div>
+
     <div
       _ngcontent-qrt-c150=""
       class="grid justify-content-between mt-8 md:mt-0"
@@ -402,7 +403,7 @@
                 class="pi pi-fw pi-check text-xl text-green-500 mr-2"
               ></i
               ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
-                >F.A.Q. et Formulaire</span
+                >Formulaire de contact</span
               >
             </li>
             <li _ngcontent-qrt-c150="" class="py-2">
@@ -508,7 +509,7 @@
                 class="pi pi-fw pi-check text-xl text-green-500 mr-2"
               ></i
               ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
-                >F.A.Q. et Formulaire</span
+                >Formulaire de contact</span
               >
             </li>
             <li _ngcontent-qrt-c150="" class="py-2">
@@ -613,7 +614,7 @@
                 class="pi pi-fw pi-check text-xl text-green-500 mr-2"
               ></i
               ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
-                >F.A.Q. et Formulaire</span
+                >Formulaire de contact</span
               >
             </li>
             <li _ngcontent-qrt-c150="" class="py-2">
@@ -717,7 +718,7 @@
                 class="pi pi-fw pi-check text-xl text-green-500 mr-2"
               ></i
               ><span _ngcontent-qrt-c150="" class="text-xl line-height-3"
-                >F.A.Q. et Formulaire</span
+                >Formulaire de contact</span
               >
             </li>
             <li _ngcontent-qrt-c150="" class="py-2">
@@ -777,10 +778,10 @@
           </ul>
         </div>
       </div>
+      
     </div>
+
   </div>
-
-
 
   <!-- <div _ngcontent-qrt-c150="" class="py-4 px-4 mx-0 mt-8 lg:mx-8 footer-section"> -->
   <div _ngcontent-qrt-c150="" class="py-4 px-4 mx-0 mt-8 footer-section">
@@ -809,6 +810,7 @@
       </div>
       <div _ngcontent-qrt-c150="" class="col-12 md:col-7">
         <div _ngcontent-qrt-c150="" class="grid text-center md:text-left">
+          
           <div _ngcontent-qrt-c150="" class="col-12 md:col-3">
             <h4
               _ngcontent-qrt-c150=""
@@ -843,6 +845,27 @@
               >Media Kit</a
             > -->
           </div>
+
+          <div _ngcontent-qrt-c150="" class="col-12 md:col-3">
+            <h4
+              _ngcontent-qrt-c150=""
+              class="font-medium text-2xl line-height-3 mb-3 text-gray-900"
+            >
+              Informations
+            </h4>
+            <a
+              _ngcontent-qrt-c150=""
+              class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
+              [routerLink]="['/support/faq']"
+              >F.A.Q.</a
+            ><a
+              _ngcontent-qrt-c150=""
+              class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
+              href="mailto:contact@agrid.ml"
+              >Contact</a
+            >
+          </div>
+
           <div _ngcontent-qrt-c150="" class="col-12 md:col-3 mt-4 md:mt-0">
             <h4
               _ngcontent-qrt-c150=""
@@ -877,8 +900,10 @@
               >CGU - CGV -SLA</a
             >
           </div>
+
         </div>
       </div>
     </div>
   </div>
+
 </div>
