--- a/apps/webapp/src/app/modules/support/components/faq/faq.component.html
+++ b/apps/webapp/src/app/modules/support/components/faq/faq.component.html
@@ -1,5 +1,31 @@
 <div class="m-3">
-  <h2 class="text-center">FAQ</h2>
+    
+  <h1 class="text-center agrid-color">F.A.Q.</h1>
+
+  <div class="grid justify-content-between mt-8 md:mt-0">
+  
+    <div class="col-12 lg:col-6 p-0 md:col-6 md:p-2  text-center">
+      <button
+        _ngcontent-qrt-c150=""
+        [routerLink]="['/']"
+        pbutton=""
+        pripple=""
+        label="Accueil"
+        class="p-ripple p-element p-button-rounded border-none ml-5 font-light line-height-2 bg-500 p-button p-component home-button">
+        <span class="p-ink"></span>
+        <span class="p-button-label">Accueil</span>
+      </button>
+    </div>
+
+    <div class="col-12 lg:col-6 p-0 md:col-6 md:p-2 text-center">
+      <img
+        src="assets/logo-agrid.svg"
+        style="width: 10rem"
+      />
+    </div>
+
+  </div>
+  
   <a
     class="flex align-items-center cursor-pointer link-question"
     *ngFor="let faq of faqs"
