--- a/apps/webapp/src/app/modules/support/components/faq/faq.component.scss
+++ b/apps/webapp/src/app/modules/support/components/faq/faq.component.scss
@@ -2,6 +2,15 @@
   color: red !important;
 }
 
+.agrid-color {
+  color: #4BC714;
+}
+
+.home-button {
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+}
+
 :host ::ng-deep {
   .loaded > div {
     animation: 3s hoverShadow;
