--- a/apps/webapp/src/app/modules/administration/components/dashboard/dashboard.component.html
+++ b/apps/webapp/src/app/modules/administration/components/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
       [data]="userChart"
       [responsive]="true"
     ></p-chart>
+    <p-divider layout="vertical"></p-divider>
     <p-chart
       class="flex-1"
       type="line"
@@ -19,18 +20,20 @@
       [responsive]="true"
     ></p-chart>
   </div>
+  <p-divider class="w-full"></p-divider>
   <div class="flex mt-1 w-full justify-content-center">
     <p-chart
       class="w-6 flex-1"
       type="line"
-      [data]="revenuesChart"
+      [data]="salesChart"
       [responsive]="true"
     ></p-chart>
-    <div *ngIf="countUserOnCurrentMonth" class="w-6 flex-1 text-center">
-      <h2>
-        Nouveaux visiteurs pour le mois de
-        {{ countUserOnCurrentMonth.date | date: 'MMMM YYYY' }} :
-      </h2>
+    <p-divider layout="vertical"></p-divider>
+    <div
+      *ngIf="countUserOnCurrentMonth"
+      class="w-6 flex-1 text-center flex justify-content-center align-items-center flex-column"
+    >
+      <h2>Nouveaux visiteurs pour le mois courant :</h2>
       <h1
         [innerText]="countUserOnCurrentMonth.number"
         style="color: var(--primary-color)"
