improve subscription step 1

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -46,7 +46,7 @@
           <a
             pripple
             class="p-ripple p-element flex m-0 md:ml-5 px-0 py-3 text-gray-900 font-medium line-height-3 menu-link"
-            href="#subscribe-page-button"
+            href="#pricing-section"
             ><span>Nos Prix</span><span class="p-ink"></span
           ></a>
         </li>
@@ -265,7 +265,7 @@
         label="Register"
         class="p-ripple p-element p-button-rounded text-xl border-none mt-5 bg-500 font-normal line-height-3 px-3 p-button p-component"
         style="margin-bottom: 1rem"
-        id="subscribe-page-button"
+        id="pricing-section"
       >
         <span class="p-ink"></span
         ><span class="p-button-label">Choississez votre offre</span>
@@ -531,7 +531,7 @@
               >À propos</a
             ><a
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
-              href="#subscribe-page-button"
+              href="#pricing-section"
               >Nos Prix</a
             ><a
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
