Add legal page #21

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -324,7 +324,7 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-times text-xl text-red-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
             </li>
           </ul>
         </div>
@@ -380,7 +380,7 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-times text-xl text-red-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
             </li>
           </ul>
         </div>
@@ -436,7 +436,7 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-times text-xl text-red-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
             </li>
           </ul>
         </div>
@@ -492,7 +492,7 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-check text-xl text-green-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
             </li>
           </ul>
         </div>
@@ -576,12 +576,9 @@
               Légal
             </h4>
             <a
+              [routerLink]="['/legal']"
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
-              >Mentions</a
-            >
-            <a
-              class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
-              >CGU - CGV -SLA</a
+              >Mentions légal</a
             >
           </div>
         </div>
