--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -578,7 +578,7 @@
             <a
               [routerLink]="['/legal']"
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
-              >Mentions légal</a
+              >Mentions légales</a
             >
           </div>
         </div>
