--- a/apps/webapp/src/app/modules/my-profile/components/my-profile-view/my-profile-view.component.html
+++ b/apps/webapp/src/app/modules/my-profile/components/my-profile-view/my-profile-view.component.html
@@ -136,8 +136,7 @@
     >
       <h2 class="mt-0" [innerText]="subscription.plan?.name"></h2>
       <div class="m-auto">
-        <span [innerText]="subscription.plan?.price"></span>
-        <!-- TODO divide the price per 100 => error : Object is possibly 'undefined'-->
+        <span [innerText]="getPrice(subscription.plan?.price)"></span>
         <span>€ par mois</span>
       </div>
       <div class="mt-2">
