--- a/apps/webapp/src/app/modules/my-profile/components/my-profile-view/my-profile-view.component.html
+++ b/apps/webapp/src/app/modules/my-profile/components/my-profile-view/my-profile-view.component.html
@@ -141,7 +141,7 @@
       </div>
       <div class="mt-2">
         Date de souscription :
-        {{ subscription.creationDate | date: 'dd/MM/YYYY' }}
+        {{ subscription.createdAt | date: 'dd/MM/YYYY' }}
       </div>
     </p-card>
   </div>
