--- a/apps/webapp/src/app/modules/support/components/home/home.component.html
+++ b/apps/webapp/src/app/modules/support/components/home/home.component.html
@@ -1,2 +1,3 @@
-<div>home page works with chatwoot!</div>
-
+<div class="flex justify-content-center w-full" *ngIf="!isChatwootLoaded">
+  <workspace-progress-spinner></workspace-progress-spinner>
+</div>
