--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -54,7 +54,7 @@
           <a
             pripple
             class="p-ripple p-element flex m-0 md:ml-5 px-0 py-3 text-gray-900 font-medium line-height-3 menu-link"
-            href="mailto:contact@agrid.ml"
+            [routerLink]="['/support']"
             ><span>Contact</span><span class="p-ink"></span
           ></a>
         </li>
@@ -324,7 +324,9 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-times text-xl text-red-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3"
+                >Assistance 24h/24, 7j/7</span
+              >
             </li>
           </ul>
         </div>
@@ -380,7 +382,9 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-times text-xl text-red-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3"
+                >Assistance 24h/24, 7j/7</span
+              >
             </li>
           </ul>
         </div>
@@ -436,7 +440,9 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-times text-xl text-red-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3"
+                >Assistance 24h/24, 7j/7</span
+              >
             </li>
           </ul>
         </div>
@@ -492,7 +498,9 @@
             </li>
             <li class="py-2">
               <i class="pi pi-fw pi-check text-xl text-green-500 mr-2"></i
-              ><span class="text-xl line-height-3">Assistance 24h/24, 7j/7</span>
+              ><span class="text-xl line-height-3"
+                >Assistance 24h/24, 7j/7</span
+              >
             </li>
           </ul>
         </div>
@@ -535,7 +543,7 @@
               >Nos Prix</a
             ><a
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
-              href="mailto:contact@agrid.ml"
+              [routerLink]="['/support']"
               >Contact</a
             >
           </div>
@@ -550,7 +558,7 @@
               >F.A.Q.</a
             ><a
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
-              href="mailto:contact@agrid.ml"
+              [routerLink]="['/support']"
               >Contact</a
             >
           </div>
