--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.scss
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.scss
@@ -3,7 +3,7 @@
 }
 
 .menu-link:hover {
-    color: #E8BE28 !important;
+    color: #4BC714 !important;
 }
 
 .override-p-home {
@@ -32,4 +32,12 @@
 
 .img-border-radius-round {
     border-radius: 50%;
+}
+
+
+.p-button {
+    background-color: #4BC714;
+}
+.p-button-text {
+    background-color: transparent;
 }
