--- a/apps/webapp/src/app/modules/legal/components/legal-page/legal-page.component.html
+++ b/apps/webapp/src/app/modules/legal/components/legal-page/legal-page.component.html
@@ -1,15 +1,9 @@
-<div class="surface-card overflow-hidden" id="home-return">
-  <div
-    class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static"
-  >
-    <a class="flex align-items-center"
-      ><img
-        src="/assets/logo-agrid.svg"
-        alt="Agrid Logo"
-        class="mr-0 lg:mr-2"
-        height="50"
-      />
-    </a>
+
+<div class="surface-card overflow-hidden" id="home-return" style="background:#faf6ca;">
+  
+  <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static" >
+    
+
     <a
       pRipple
       enterclass="hidden"
@@ -19,8 +13,7 @@
       ><i class="pi pi-bars text-4xl"></i><span class="p-ink"></span>
     </a>
     <div
-      class="align-items-center flex-grow-1 justify-content-between lg:flex absolute lg:static w-full surface-overlay left-0 px-6 lg:px-0 z-2 hidden"
-      style="top: 92%"
+      class="align-items-center flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2" 
       [ngClass]="{ hidden: displayMobileMenu }"
     >
       <ul
@@ -30,15 +23,7 @@
           <a
             pripple
             class="p-ripple p-element flex m-0 md:ml-5 px-0 py-3 text-gray-900 font-medium line-height-3 menu-link"
-            [routerLink]="['/showcase']"
-            ><span>Accueil</span><span class="p-ink"></span
-          ></a>
-        </li>
-        <li>
-          <a
-            pripple
-            class="p-ripple p-element flex m-0 md:ml-5 px-0 py-3 text-gray-900 font-medium line-height-3 menu-link"
-            [routerLink]="['/showcase#about-section']"
+            href="#about-section"
             ><span>À Propos</span><span class="p-ink"></span
           ></a>
         </li>
@@ -46,7 +31,7 @@
           <a
             pripple
             class="p-ripple p-element flex m-0 md:ml-5 px-0 py-3 text-gray-900 font-medium line-height-3 menu-link"
-            [routerLink]="['/showcase#pricing-section']"
+            href="#pricing-section"
             ><span>Nos Prix</span><span class="p-ink"></span
           ></a>
         </li>
@@ -59,6 +44,14 @@
           ></a>
         </li>
       </ul>
+        <a class="flex align-items-center" href="#">
+          <img
+            src="/assets/logo-agrid.svg"
+            alt="Agrid Logo"
+            class="mr-0 lg:mr-2"
+            height="50"
+          />
+        </a>
       <div
         class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0"
       >
@@ -66,7 +59,7 @@
           pbutton
           pripple
           label="Login"
-          class="p-ripple p-element p-button-text p-button-rounded border-none font-light line-height-2 text-500 p-button p-component"
+          class="p-ripple p-element p-button-text border-none font-light line-height-2 text-500 p-button p-component"
           [routerLink]="['/signin']"
         >
           <span class="p-ink"></span
@@ -77,7 +70,7 @@
           pbutton
           pripple
           label="Register"
-          class="p-ripple p-element p-button-rounded border-none ml-5 font-light line-height-2 bg-500 p-button p-component"
+          class="p-ripple p-element border-none ml-5 font-light line-height-2 bg-500 p-button p-component"
         >
           <span class="p-ink"></span
           ><span class="p-button-label">Inscription</span>
@@ -225,7 +218,7 @@
     </p>
   </div>
 
-  <div class="py-4 px-4 mx-0 mt-8 footer-section">
+  <div class="py-4 px-4 mx-0 mt-8" style="background: url('assets/landing-page/images/background2.png')">
     <div class="grid justify-content-between">
       <div class="col-12 md:col-2" style="margin-top: -1.5rem">
         <div
