--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -1,15 +1,6 @@
-<div class="surface-card overflow-hidden" id="home-return">
-  <div
-    class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static"
-  >
-    <a class="flex align-items-center"
-      ><img
-        src="/assets/logo-agrid.svg"
-        alt="Agrid Logo"
-        class="mr-0 lg:mr-2"
-        height="50"
-      />
-    </a>
+<div class="surface-card overflow-hidden" id="home-return" style= "background-color: #faf6ca;">
+  <div class="py-4 px-4 mx-0 md:mx-6 lg:mx-8 lg:px-8 flex align-items-center justify-content-between relative lg:static" >
+    
     <a
       pRipple
       enterclass="hidden"
@@ -19,21 +10,12 @@
       ><i class="pi pi-bars text-4xl"></i><span class="p-ink"></span>
     </a>
     <div
-      class="align-items-center flex-grow-1 justify-content-between lg:flex absolute lg:static w-full surface-overlay left-0 px-6 lg:px-0 z-2 hidden"
-      style="top: 92%"
+      class="align-items-center flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2" 
       [ngClass]="{ hidden: displayMobileMenu }"
     >
       <ul
         class="list-none p-0 m-0 flex lg:align-items-center select-none flex-column lg:flex-row cursor-pointer"
       >
-        <li>
-          <a
-            pripple
-            class="p-ripple p-element flex m-0 md:ml-5 px-0 py-3 text-gray-900 font-medium line-height-3 menu-link"
-            href="#"
-            ><span>Accueil</span><span class="p-ink"></span
-          ></a>
-        </li>
         <li>
           <a
             pripple
@@ -59,6 +41,14 @@
           ></a>
         </li>
       </ul>
+        <a class="flex align-items-center" href="#">
+          <img
+            src="/assets/logo-agrid.svg"
+            alt="Agrid Logo"
+            class="mr-0 lg:mr-2"
+            height="50"
+          />
+        </a>
       <div
         class="flex justify-content-between lg:block border-top-1 lg:border-top-none surface-border py-3 lg:py-0 mt-3 lg:mt-0"
       >
@@ -66,7 +56,7 @@
           pbutton
           pripple
           label="Login"
-          class="p-ripple p-element p-button-text p-button-rounded border-none font-light line-height-2 text-500 p-button p-component"
+          class="p-ripple p-element p-button-text border-none font-light line-height-2 text-500 p-button p-component"
           [routerLink]="['/signin']"
         >
           <span class="p-ink"></span
@@ -77,7 +67,7 @@
           pbutton
           pripple
           label="Register"
-          class="p-ripple p-element p-button-rounded border-none ml-5 font-light line-height-2 bg-500 p-button p-component"
+          class="p-ripple p-element border-none ml-5 font-light line-height-2 bg-500 p-button p-component"
         >
           <span class="p-ink"></span
           ><span class="p-button-label">Inscription</span>
@@ -85,16 +75,21 @@
       </div>
     </div>
   </div>
-  <div id="hero" class="grid py-4 px-4 lg:px-8 relative">
+
+
+
+
+  <div id="" class="grid py-4 px-4 lg:px-8 relative" style="height: 100vh; background: url('assets/landing-page/images/background1.jpg')">
     <div class="mx-4 md:mx-8 mt-0 md:mt-4">
       <h1
-        class="text-6xl font-bold text-gray-900 line-height-2"
-        style="margin-bottom: 0.1rem !important"
+        class="text-6xl font-bold text-white-900 line-height-2"
+        style="margin-bottom: 0.1rem !important; color: white;"
       >
         <span class="font-light block">AGRID</span>Le Choix intelligent
       </h1>
       <p
-        class="font-normal text-2xl line-height-3 md:mt-3 text-gray-700 override-p-home"
+        class="font-normal text-2xl line-height-3 md:mt-3 text-white-700 override-p-home"
+        style="color: white;"
       >
         Vous souhaitez avoir une présence sur Internet ? <br />Vous voulez que
         vos clients vous localisent plus facilement ?
@@ -105,172 +100,148 @@
         pripple
         type="button"
         label="Register"
-        class="p-ripple p-element p-button-rounded text-xl border-none bg-500 font-normal line-height-3 px-3 p-button p-component"
+        class="p-ripple p-element text-xl border-none bg-500 font-normal line-height-3 px-3 p-button p-component"
       >
         <span class="p-ink"></span
         ><span class="p-button-label">Rejoignez Agrid !</span>
       </button>
     </div>
-    <img
-      src="assets/landing-page/images/banner.png"
-      alt=""
-      class="sm:mt-5 md:mt-0"
-      style="right: 10%"
-    />
   </div>
 
-  <div class="py-4 px-4 lg:px-8 mx-0 my-2 lg:mx-8" id="about-section">
-    <div class="text-center">
-      <h1 class="text-gray-900 font-normal mb-2">
-        À propos d'<span class="agrid-text">Agrid</span>
+
+
+
+
+
+  <div class="py-4 px-4 lg:px-8 mx-0" id="about-section" style="background: url('assets/landing-page/images/background2.png'); margin : 0">
+    <div class="text-center mt-5">
+      <h1 class="mt-5 mb-2" style="color: #F7d96d; ">
+        <span>À propos d'Agrid</span>
       </h1>
+    </div>
+    <div class="grid mt-12 pb-2 md:pb-8">
+        <div
+          class="col-12 my-auto flex flex-column md:align-items-center md:text-center"
+        >
+          <h2 class="line-height-1 text-4xl font-normal" style="color: #F7d96d;">
+            Montrez vous sur Internet
+          </h2>
+          <span
+            class="text-white-700 text-2xl line-height-3 ml-0 md:ml-2"
+            style="max-width: 650px;color: white;"
+            >Nous vous fournissons une page internet présentant votre travail et vos produits. Vos
+            clients pourront vous trouver plus rapidement !
+          </span>
+        </div>
+        <div
+          class="flex justify-content-center col-12 p-0 flex-order-1 md:flex-order-0 my-auto"
+          style="border-radius: 8px; "
+        >
+          <img
+            src="assets/landing-page/images/internet.png"
+            alt="mockup mobile"
+            class="w-11"
+            style="max-width: 650px;"
+          />
+        </div>
+    </div>
+  
+
+    <div class="grid mt-6 pb-2 md:pb-8">
+      <div class="col-6">
+        <div
+          class="col-12 my-auto flex flex-column md:align-items-center md:text-center"
+        >
+          <h2 class="line-height-1 text-4xl font-normal" style="color: #F7d96d;">
+            Vos produits disponibles en ligne
+          </h2>
+          <span
+            class="text-white-700 text-2xl line-height-3 ml-0 md:ml-2"
+            style="max-width: 650px;color: white;"
+            >Vendez vos produits directement sur votre site. Vos clients pourront
+            venir récuperer leurs commandes chez vous ou les faire livrer grâce un
+            service de livraison externe !
+          </span>
+        </div>
+        <div
+          class="flex justify-content-center col-12 p-0 flex-order-1 md:flex-order-0"
+          style="border-radius: 8px"
+        >
+          <img
+            src="assets/landing-page/images/shop.png"
+            alt="mockup mobile"
+            class="w-11"
+          />
+        </div>
+      </div>
+      <div class="col-6">
+        <div
+          class="col-12 my-auto flex flex-column md:align-items-center md:text-center"
+        >
+          <h2 class="line-height-1 text-4xl font-normal" style="color: #F7d96d;">
+            Gérez votre stock facilement
+          </h2>
+          <span
+            class="text-white-700 text-2xl line-height-3 ml-0 md:ml-2"
+            style="max-width: 650px;color: white;"
+            >Notre outil de gestion des stocks vous permet de connaître à chaque
+            instant l'état de vos stocks de matieres premières, d'en-cours de
+            production et de produits finis. Faire un inventaire devient plus
+            simple !
+          </span>
+        </div>
+        <div
+          class="flex justify-content-center col-12 p-0 flex-order-1 md:flex-order-0"
+          style="border-radius: 8px"
+        >
+          <img
+            src="assets/landing-page/images/stock.png"
+            alt="mockup mobile"
+            class="w-11"
+          />
+        </div>
+      </div>
     </div>
 
     <div class="grid mt-6 pb-2 md:pb-8">
-      <div
-        class="flex justify-content-center col-12 lg:col-6 p-0 flex-order-1 md:flex-order-0"
-        style="border-radius: 8px"
-      >
-        <img
-          src="assets/landing-page/images/blop.png"
-          alt="mockup mobile"
-          class="w-11"
-        />
-      </div>
-      <div
-        class="col-12 md:col-6 my-auto flex flex-column md:align-items-end md:text-right"
-      >
         <div
-          class="flex align-items-center justify-content-center bg-orange-200"
-          style="width: 4.2rem; height: 4.2rem; border-radius: 10px"
+          class="col-12 my-auto flex flex-column md:align-items-center md:text-center"
         >
-          <i class="pi pi-fw pi-desktop text-5xl text-green-700"></i>
+          <h2 class="line-height-1 text-4xl font-normal" style="color: #F7d96d;">
+            Une équipe pour vous accompagner
+          </h2>
+          <span
+            class="text-white-700 text-2xl line-height-3 ml-0 md:ml-2"
+            style="max-width: 650px;color: white;"
+            >Agrid, c'est toute une équipe pour vous accompagner dans vos
+            démarches. Un support informatique est présent 24h/24 et 7j/7 pour
+            vous aider en cas de problème !
+          </span>
         </div>
-        <h2 class="line-height-1 text-gray-900 text-4xl font-normal">
-          Une présence sur Internet
-        </h2>
-        <span
-          class="text-gray-700 text-2xl line-height-3 ml-0 md:ml-2"
-          style="max-width: 650px"
-          >Une page internet présentant votre travail et vos produits. Vos
-          clients pourront vous trouver plus rapidement !
-        </span>
-      </div>
-    </div>
-
-    <div class="grid">
-      <div class="col-12 md:col-6 my-auto flex flex-column align-items-start">
         <div
-          class="flex align-items-center justify-content-center bg-green-200"
-          style="width: 4.2rem; height: 4.2rem; border-radius: 10px"
+          class="flex justify-content-center col-12 p-0 flex-order-1 md:flex-order-0"
+          style="border-radius: 8px"
         >
-          <i class="pi pi-fw pi-shopping-cart text-5xl text-orange-700"></i>
+          <img
+            src="assets/landing-page/images/support.png"
+            alt="mockup mobile"
+            class="w-11"
+            style="max-width: 650px;"
+          />
         </div>
-        <h2 class="line-height-1 text-gray-900 text-4xl font-normal">
-          Vos produits disponible en ligne
-        </h2>
-        <span
-          class="text-gray-700 text-2xl line-height-3 mr-0 md:mr-2"
-          style="max-width: 650px"
-          >Vendez vos produits directement sur votre site. Vos clients pourront
-          venir récuperer leurs commandes chez vous ou les faire livrer grâce un
-          service de livraison externe.
-        </span>
-      </div>
-      <div
-        class="flex justify-content-end flex-order-1 sm:flex-order-2 col-12 lg:col-6 p-0"
-        style="border-radius: 8px"
-      >
-        <img
-          src="assets/landing-page/images/eboutic-1.png"
-          alt="mockup"
-          class="w-11 img-border-radius"
-        />
-      </div>
-    </div>
-
-    <div class="grid mt-8 pb-2 md:pb-8">
-      <div
-        class="flex justify-content-center col-12 lg:col-6 bg-green-200 p-0 flex-order-1 md:flex-order-0"
-        style="border-radius: 8px"
-      >
-        <img
-          src="assets/landing-page/images/stock.jpg"
-          alt="mockup mobile"
-          class="w-11 img-border-radius-round"
-        />
-      </div>
-      <div
-        class="col-12 md:col-6 my-auto flex flex-column md:align-items-end md:text-right"
-      >
-        <div
-          class="flex align-items-center justify-content-center bg-orange-200"
-          style="width: 4.2rem; height: 4.2rem; border-radius: 10px"
-        >
-          <i class="pi pi-fw pi-inbox text-5xl text-green-700"></i>
-        </div>
-        <h2 class="line-height-1 text-gray-900 text-4xl font-normal">
-          La Gestion de vos stocks
-        </h2>
-        <span
-          class="text-gray-700 text-2xl line-height-3 ml-0 md:ml-2"
-          style="max-width: 650px"
-          >Notre outil de gestion des stocks vous permet de connaître à chaque
-          instant l'état de vos stocks de matieres premières, d'en-cours de
-          production et de produits finis. Faire un inventaire devient plus
-          simple !</span
-        >
-      </div>
-    </div>
-
-    <div class="grid">
-      <div class="col-12 md:col-6 my-auto flex flex-column align-items-start">
-        <div
-          class="flex align-items-center justify-content-center bg-green-200"
-          style="width: 4.2rem; height: 4.2rem; border-radius: 10px"
-        >
-          <i class="pi pi-fw pi-user-plus text-5xl text-orange-700"></i>
-        </div>
-        <h2 class="line-height-1 text-gray-900 text-4xl font-normal">
-          Une équipe pour vous accompagner
-        </h2>
-        <span
-          class="text-gray-700 text-2xl line-height-3 mr-0 md:mr-2"
-          style="max-width: 650px"
-          >Agrid, c'est toute une équipe pour vous accompagner dans vos
-          démarches. Un support informatique est présent 24h/24 et 7j/7 pour
-          vous aider en cas de problème.</span
-        >
-      </div>
-      <div
-        class="flex justify-content-end flex-order-1 sm:flex-order-2 col-12 lg:col-6 p-0"
-        style="border-radius: 8px"
-      >
-        <img
-          src="assets/landing-page/images/support.jpg"
-          alt="mockup"
-          class="w-11 img-border-radius"
-        />
-      </div>
     </div>
   </div>
 
-  <div class="px-4 lg:px-8">
+
+
+
+  <div class="px-4 lg:px-8 " id="pricing-section" style="min-height: 90vh;">
     <div class="text-center">
-      <button
-        [routerLink]="['/subscription']"
-        pbutton
-        pripple
-        type="button"
-        label="Register"
-        class="p-ripple p-element p-button-rounded text-xl border-none mt-5 bg-500 font-normal line-height-3 px-3 p-button p-component"
-        style="margin-bottom: 1rem"
-        id="pricing-section"
-      >
-        <span class="p-ink"></span
-        ><span class="p-button-label">Choississez votre offre</span>
-      </button>
+      <h1 class="mb-2" style="color: #5cb270; padding: 2em; " >
+        <span>Nos offres pour répondre à vos besoins</span>
+      </h1>
     </div>
+    
 
     <div class="grid justify-content-between mt-8 md:mt-0">
       <div class="col-12 lg:col-3 p-0 md:col-6 md:p-2">
@@ -506,9 +477,24 @@
         </div>
       </div>
     </div>
+
+    <div class="text-center">
+      <button
+        [routerLink]="['/subscription']"
+        pbutton
+        pripple
+        type="button"
+        label="Register"
+        class="p-ripple p-element text-xl border-none mt-5 bg-500 font-normal line-height-3 px-3 p-button p-component"
+        style="margin-bottom: 1rem"
+      >
+        <span class="p-ink"></span
+        ><span class="p-button-label">Choississez votre offre</span>
+      </button>
+    </div>
   </div>
 
-  <div class="py-4 px-4 mx-0 mt-8 footer-section">
+  <div class="py-4 px-4 mx-0 mt-8 footer-section" style="background: url('assets/landing-page/images/background2.png')">
     <div class="grid justify-content-between">
       <div class="col-12 md:col-2" style="margin-top: -1.5rem">
         <div
@@ -518,8 +504,8 @@
             src="/assets/logo-agrid.svg"
             alt="footer sections"
             class="mr-2 footer-logo"
-            width="50"
-            height="50"
+            width="40"
+            height="40"
           />
         </div>
       </div>
