--- a/apps/webapp/src/styles.scss
+++ b/apps/webapp/src/styles.scss
@@ -11,3 +11,9 @@ html {
   margin: 0 !important;
   font-family: sans-serif;
 }
+
+.woot-widget-holder {
+  margin: 5% auto !important;
+  left: 0 !important;
+  right: 0 !important; 
+}
