--- a/apps/webapp/src/app/modules/administration/components/dashboard/dashboard.component.html
+++ b/apps/webapp/src/app/modules/administration/components/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
         class="p-ripple p-element p-button-rounded border-none ml-5 font-light line-height-2 bg-500 p-button p-component"
       >
         <span class="p-ink"></span>
-        <span class="p-button-label">Déconnexion</span>
+        <span class="p-button-label" (click)="signout()">Déconnexion</span>
       </button>
     </div>
   </div>
