add link form for presentation

--- a/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
+++ b/apps/webapp/src/app/modules/showcase/components/landing-page/landing-page.component.html
@@ -558,8 +558,8 @@
               >F.A.Q.</a
             ><a
               class="line-height-3 text-xl block cursor-pointer mb-2 text-gray-700 menu-link"
-              [routerLink]="['/support']"
-              >Contact</a
+              [routerLink]="['/support/contact']"
+              >Contact - Formulaire</a
             >
           </div>
 
