--- a/apps/webapp/src/app/modules/support/components/contact/contact.component.html
+++ b/apps/webapp/src/app/modules/support/components/contact/contact.component.html
@@ -7,6 +7,19 @@
   <h1 class="mx-auto text-center" [ngStyle]="{ color: 'var(--primary-color)' }">
     Demande de contact
   </h1>
+
+  <div class="flex w-full">
+    <p-button
+    pbutton
+    pripple
+    styleClass="p-button-text p-button-rounded"
+    class="mx-auto text-center"
+    [routerLink]="['/showcase']"
+    label="Accueil"
+  >
+</p-button>
+  </div>
+  
   <h4 class="mb-2">Merci de remplir ce formulaire</h4>
   <div class="grid fluid mt-3 ml-2">
     <div class="col-12 mb-4">
